# pds

./: .gitmodules  LICENSE  README.md  pds.py  pyproject.toml  setup.py  time_sampling_optimizer.py
core/: mesh_utils.py  pds.py  pfp_utils.py
optimizer/: tso.py
solver/: PDESolver_EXP.py  PDEsolver_IMP.py  matbuilder.py
src/pds/DSS_analyzer_Mariner/: Data2D_XT_DSS.py  README.md  datareader.py  event_analysis_tools.py
src/pds/core/: pds.py
src/pds/solver/: PDEsolver_IMP.py  matbuilder.py
src/pds/tester/: MultiSource_tester.ipynb  core_tester.ipynb  hetero_grid_tester.ipynb  io_tester.ipynb  tso_benchmark.ipynb
tester/: MultiSource_tester.ipynb  core_tester.ipynb  hetero_grid_tester.ipynb  io_tester.ipynb  optimizer_tester_benchmark.ipynb  tso_benchmark.ipynb
tester/testdata/: note.md
